# tax-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  NEXT_STEPS.md  README.md  ROADMAP.md  SKILL.md  certify_phase1.py  corporate_tax_calc_cli.py  corporate_tax_calculator.py  cpa_eval.py  document_parser.py  download_exam_papers.py  eval_execution_planner.py  eval_execution_planner_pdf.py  eval_goldset.py  eval_judgment_v1.py  eval_ollama_rule_firing.py  eval_scenarios.py  eval_scenarios_corporate_tax.py  eval_scenarios_inheritance_gift.py  eval_scenarios_transfer.py  eval_scenarios_vat.py  eval_strategy_catalog_v1.py  eval_strategy_corp_risk.py  eval_strategy_e2e.py  eval_strategy_rules.py  exam_eval.py  execution_planner.py  execution_planner_pdf.py  inheritance_gift_calc_cli.py  inheritance_gift_calculator.py  law_watch.py  legal_search.py  main.py  mcq_eval.py  parse_exam_papers.py  property_holding_tax.py  pyproject.toml  (+9 more)
agent/: law_client.py  track_b_poc.py
app/: create_shortcut.ps1  start_tax_app.bat  tax_app.py  tax_dashboard.py
assets/: make_desktop_shortcut.ps1
data/: admin_rule_corpus.json  art17_extract.txt  art45_extract.txt  art56_2_extract.txt  art56_direct.txt  art_104_3_extract.txt  art_104_extract.txt  art_119_extract.txt  art_129_extract.txt  art_12_3_extract.txt  art_14_2_extract.txt  art_14_2_other_extract.txt  art_16_extract.txt  art_17_extract.txt  art_1_2_extract.txt  art_35_extract.txt  art_43_extract.txt  art_57_extract.txt  art_59_4_extract.txt  art_5_extract.txt  art_65중간예납_extract.txt  art_81_extract.txt  art_87_extract.txt  (+16 more)
(+142 files in other folders)
